@@ -22,3 +22,4 @@ Authors who contributed code or testing:
  - awestendorf - https://github.com/awestendorf
  - Ali-Akber Saifee - https://github.com/alisaifee
  - etng - https://github.com/etng
+ - gmolight - https://github.com/gmolight
